fix: workspace collapse flicker

--- a/app/src/features/apiClient/screens/apiClient/components/sidebar/MultiWorkspaceSidebar/WorkspaceProvider/WorkspaceCollapse/workspaceCollapse.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/sidebar/MultiWorkspaceSidebar/WorkspaceProvider/WorkspaceCollapse/workspaceCollapse.scss
@@ -104,7 +104,7 @@
     }
   }
 
-  .ant-collapse-content.ant-collapse-content-active {
+  .ant-collapse-content {
     .ant-collapse-content-box {
       padding-top: 0;
 
